[gd_scene load_steps=22 format=2]

[ext_resource path="res://src/characters/player/player.gd" type="Script" id=1]
[ext_resource path="res://src/props/player-camera/player-camera.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/user-interface/fonts/default-font.tres" type="DynamicFont" id=3]
[ext_resource path="res://src/props/wall-raycasts/wall-raycasts.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/props/meat-hook/meat-hook.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/actors/player/player-mh-anims.png" type="Texture" id=6]
[ext_resource path="res://src/props/variable-sfx-player/variable-sfx-player.gd" type="Script" id=7]
[ext_resource path="res://assets/sounds/working-step.wav" type="AudioStream" id=8]
[ext_resource path="res://assets/sounds/working-fall.wav" type="AudioStream" id=9]
[ext_resource path="res://src/helpers/sounds.gd" type="Script" id=10]
[ext_resource path="res://assets/sounds/working-jump.wav" type="AudioStream" id=11]
[ext_resource path="res://assets/sounds/working-dash.wav" type="AudioStream" id=12]
[ext_resource path="res://assets/sounds/working-wallslide.wav" type="AudioStream" id=13]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4, 7 )

[sub_resource type="Animation" id=2]
resource_name = "dash"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 17 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("Sounds/Dash")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 0.0 ],
"method": "play"
} ]
}

[sub_resource type="Animation" id=3]
resource_name = "fall"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 10, 11, 12 ]
}

[sub_resource type="Animation" id=4]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 13, 14, 15, 14 ]
}

[sub_resource type="Animation" id=5]
length = 0.3
step = 0.0833333
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0833333, 0.166667 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 7, 8, 9 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("Sounds/Jump")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 0.0 ],
"method": "play"
} ]
}

[sub_resource type="Animation" id=6]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 6 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("Sounds/Step")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ 0.0 ],
"method": "play"
}, {
"args": [ 0.0 ],
"method": "play"
} ]
}

[sub_resource type="Animation" id=7]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 16 ]
}

[sub_resource type="CapsuleShape2D" id=8]
radius = 3.5
height = 6.0

[node name="Player" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 6 )
offset = Vector2( 0, -8 )
hframes = 18
frame = 16

[node name="Meathook" parent="." instance=ExtResource( 5 )]
position = Vector2( 0, -8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -7 )
shape = SubResource( 1 )

[node name="PlayerCamera" parent="." instance=ExtResource( 2 )]

[node name="WallRaycasts" parent="." instance=ExtResource( 4 )]
position = Vector2( 0, -8 )

[node name="LeftRaycast2D" parent="WallRaycasts" index="0"]
cast_to = Vector2( -5, 0 )

[node name="RightRaycast2D" parent="WallRaycasts" index="1"]
cast_to = Vector2( 5, 0 )

[node name="StateText" type="Label" parent="."]
visible = false
margin_left = -16.0
margin_top = -24.0
margin_right = 24.0
margin_bottom = -10.0
custom_fonts/font = ExtResource( 3 )
text = "state"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timers" type="Node" parent="."]

[node name="DashTimer" type="Timer" parent="Timers"]
process_mode = 0
one_shot = true

[node name="DashCooldownTimer" type="Timer" parent="Timers"]
process_mode = 0
one_shot = true

[node name="CoyoteTimer" type="Timer" parent="Timers"]
process_mode = 0
one_shot = true

[node name="JumpTimer" type="Timer" parent="Timers"]
process_mode = 0
one_shot = true

[node name="WallJumpCooldownTimer" type="Timer" parent="Timers"]
one_shot = true

[node name="WallJumpStickyTimer" type="Timer" parent="Timers"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/dash = SubResource( 2 )
anims/fall = SubResource( 3 )
anims/idle = SubResource( 4 )
anims/jump = SubResource( 5 )
anims/run = SubResource( 6 )
anims/wallSlide = SubResource( 7 )

[node name="Sounds" type="Node" parent="."]
script = ExtResource( 10 )

[node name="Step" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 8 )
bus = "SFX"
script = ExtResource( 7 )
maximum_pitch = 1.5

[node name="Fall" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 9 )
bus = "SFX"
script = ExtResource( 7 )

[node name="Jump" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 11 )
bus = "SFX"
script = ExtResource( 7 )

[node name="Dash" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 12 )
bus = "SFX"
script = ExtResource( 7 )

[node name="WallSlide" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 13 )
bus = "SFX"
script = ExtResource( 7 )

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 128

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2( 0, -7 )
shape = SubResource( 8 )

[editable path="WallRaycasts"]
